fixed grid layout issue

--- a/src/assets/Components/CategoryFilter/CategoryFilter.css
+++ b/src/assets/Components/CategoryFilter/CategoryFilter.css
@@ -3,7 +3,7 @@ filter {
     padding: 2rem;
     box-sizing: border-box;
 
-    width: 20rem;
+    width: 20%;
     height: 25rem;
 
     border-radius: 1rem;
