--- a/src/assets/Components/MiniBrowse/MiniBrowse.css
+++ b/src/assets/Components/MiniBrowse/MiniBrowse.css
@@ -5,11 +5,13 @@ minibrowse {
     gap: 3em;
 
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr, 1fr;
+
+    grid-auto-flow: row;
 }
 
 .minibrowse-card {
-    padding: 1.25rem;
+    padding: 1.25em;
     box-sizing: border-box;
     border: 1px solid black;
 
@@ -21,25 +23,46 @@ minibrowse {
 }
 .minibrowse-preview {
     width: 100%;
-    height: 50%;
+    height: 10em;
     text-align: center;
-    flex: 1 1 60%;
 }
 .minibrowse-preview img {
-    width: 6em;
+    width: 100%;
     height: 100%;
-
     object-fit: contain;
 }
 
 .minibrowse-name {
     margin: 1rem 0 1rem 0;
     text-align: left;
-    width: 20ch;
-    flex: 1 1 15%;
+    width: 25ch;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .minibrowse-price {
     width: fit-content;
     flex: 1 1 15%;
+}
+
+@media only screen and (width < 1920px) {
+    minibrowse {
+        display: grid;
+        gap: 2%;
+
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr, 1fr;
+    }
+}
+
+@media only screen and (width < 1280px) {
+    minibrowse {
+        display: grid;
+        gap: 2%;
+
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr, 1fr;
+    }
 }
